fortran-77-fixed-form/src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ProgramUnitSeq
Rule 2     ProgramUnitSeq -> ProgramUnit
Rule 3     ProgramUnitSeq -> ProgramUnitSeq ProgramUnit
Rule 4     ProgramUnit -> MainProgram
Rule 5     ProgramUnit -> FunctionSubprogram
Rule 6     ProgramUnit -> SubroutineSubprogram
Rule 7     MainProgram -> PROGRAM ID MainBody END
Rule 8     FunctionSubprogram -> TypeSpec FUNCTION ID ( OptParamList ) SubprogramBody END
Rule 9     SubroutineSubprogram -> SUBROUTINE ID ( OptParamList ) SubprogramBody END
Rule 10    MainBody -> DeclPart ExecPart
Rule 11    MainBody -> ExecPart
Rule 12    SubprogramBody -> DeclPart ExecPart
Rule 13    SubprogramBody -> ExecPart
Rule 14    DeclPart -> DeclarationStmt
Rule 15    DeclPart -> DeclPart DeclarationStmt
Rule 16    ExecPart -> ExecutableStmt
Rule 17    ExecPart -> ExecPart ExecutableStmt
Rule 18    ExecutableStmt -> LabeledExecutableStmt
Rule 19    ExecutableStmt -> UnlabeledExecutableStmt
Rule 20    LabeledExecutableStmt -> LABEL UnlabeledExecutableStmt
Rule 21    UnlabeledExecutableStmt -> AssignmentStmt
Rule 22    UnlabeledExecutableStmt -> IfStmt
Rule 23    UnlabeledExecutableStmt -> DoStmt
Rule 24    UnlabeledExecutableStmt -> GotoStmt
Rule 25    UnlabeledExecutableStmt -> ContinueStmt
Rule 26    UnlabeledExecutableStmt -> StopStmt
Rule 27    UnlabeledExecutableStmt -> ReadStmt
Rule 28    UnlabeledExecutableStmt -> PrintStmt
Rule 29    UnlabeledExecutableStmt -> ReturnStmt
Rule 30    UnlabeledExecutableStmt -> CallStmt
Rule 31    DeclarationStmt -> TypeSpec DeclaratorList
Rule 32    TypeSpec -> INTEGER
Rule 33    TypeSpec -> REAL
Rule 34    TypeSpec -> LOGICAL
Rule 35    DeclaratorList -> Declarator
Rule 36    DeclaratorList -> DeclaratorList , Declarator
Rule 37    Declarator -> ID
Rule 38    Declarator -> ID ( INT_CONST )
Rule 39    OptParamList -> ParamList
Rule 40    OptParamList -> Empty
Rule 41    ParamList -> ID
Rule 42    ParamList -> ParamList , ID
Rule 43    AssignmentStmt -> Designator = Expr
Rule 44    IfStmt -> IF ( Expr ) THEN ThenBlock ENDIF
Rule 45    IfStmt -> IF ( Expr ) THEN ThenBlock ELSE ElseBlock ENDIF
Rule 46    ThenBlock -> ExecutableStmt
Rule 47    ThenBlock -> ThenBlock ExecutableStmt
Rule 48    ElseBlock -> ExecutableStmt
Rule 49    ElseBlock -> ElseBlock ExecutableStmt
Rule 50    DoStmt -> DO INT_CONST ID = Expr , Expr DoRangeTail DoBody
Rule 51    DoRangeTail -> , Expr
Rule 52    DoRangeTail -> Empty
Rule 53    DoBody -> LABEL CONTINUE
Rule 54    DoBody -> DoInnerBlock LABEL CONTINUE
Rule 55    DoInnerBlock -> DoInnerStmt
Rule 56    DoInnerBlock -> DoInnerBlock DoInnerStmt
Rule 57    DoInnerStmt -> AssignmentStmt
Rule 58    DoInnerStmt -> IfStmt
Rule 59    DoInnerStmt -> DoStmt
Rule 60    DoInnerStmt -> GotoStmt
Rule 61    DoInnerStmt -> ContinueStmt
Rule 62    DoInnerStmt -> StopStmt
Rule 63    DoInnerStmt -> ReadStmt
Rule 64    DoInnerStmt -> PrintStmt
Rule 65    DoInnerStmt -> ReturnStmt
Rule 66    DoInnerStmt -> CallStmt
Rule 67    GotoStmt -> GOTO INT_CONST
Rule 68    ContinueStmt -> CONTINUE
Rule 69    StopStmt -> STOP
Rule 70    ReturnStmt -> RETURN
Rule 71    CallStmt -> CALL ID ( OptArgList )
Rule 72    ReadStmt -> READ TIMES , ReadList
Rule 73    ReadList -> ReadItem
Rule 74    ReadList -> ReadList , ReadItem
Rule 75    ReadItem -> Designator
Rule 76    PrintStmt -> PRINT TIMES , PrintList
Rule 77    PrintList -> PrintItem
Rule 78    PrintList -> PrintList , PrintItem
Rule 79    PrintItem -> Expr
Rule 80    Designator -> ID
Rule 81    Designator -> ID ( OptArgList )
Rule 82    OptArgList -> ArgList
Rule 83    OptArgList -> Empty
Rule 84    ArgList -> Expr
Rule 85    ArgList -> ArgList , Expr
Rule 86    Expr -> OrExpr
Rule 87    OrExpr -> AndExpr
Rule 88    OrExpr -> OrExpr OR AndExpr
Rule 89    AndExpr -> NotExpr
Rule 90    AndExpr -> AndExpr AND NotExpr
Rule 91    NotExpr -> RelExpr
Rule 92    NotExpr -> NOT NotExpr
Rule 93    RelExpr -> AddExpr
Rule 94    RelExpr -> AddExpr RelOp AddExpr
Rule 95    RelOp -> LT
Rule 96    RelOp -> LE
Rule 97    RelOp -> EQ
Rule 98    RelOp -> NE
Rule 99    RelOp -> GT
Rule 100   RelOp -> GE
Rule 101   AddExpr -> MulExpr
Rule 102   AddExpr -> AddExpr + MulExpr
Rule 103   AddExpr -> AddExpr - MulExpr
Rule 104   MulExpr -> PowExpr
Rule 105   MulExpr -> MulExpr TIMES PowExpr
Rule 106   MulExpr -> MulExpr / PowExpr
Rule 107   PowExpr -> UnaryExpr
Rule 108   PowExpr -> Primary POWER PowExpr
Rule 109   UnaryExpr -> Primary
Rule 110   UnaryExpr -> + UnaryExpr
Rule 111   UnaryExpr -> - UnaryExpr
Rule 112   Primary -> INT_CONST
Rule 113   Primary -> REAL_CONST
Rule 114   Primary -> TRUE
Rule 115   Primary -> FALSE
Rule 116   Primary -> STRING_CONST
Rule 117   Primary -> Designator
Rule 118   Primary -> ( Expr )
Rule 119   Empty -> <empty>

Terminals, with rules where they appear

(                    : 8 9 38 44 45 71 81 118
)                    : 8 9 38 44 45 71 81 118
+                    : 102 110
,                    : 36 42 50 51 72 74 76 78 85
-                    : 103 111
/                    : 106
=                    : 43 50
AND                  : 90
CALL                 : 71
CONTINUE             : 53 54 68
DO                   : 50
ELSE                 : 45
END                  : 7 8 9
ENDIF                : 44 45
EQ                   : 97
FALSE                : 115
FUNCTION             : 8
GE                   : 100
GOTO                 : 67
GT                   : 99
ID                   : 7 8 9 37 38 41 42 50 71 80 81
IF                   : 44 45
INTEGER              : 32
INT_CONST            : 38 50 67 112
LABEL                : 20 53 54
LE                   : 96
LOGICAL              : 34
LT                   : 95
NE                   : 98
NOT                  : 92
OR                   : 88
POWER                : 108
PRINT                : 76
PROGRAM              : 7
READ                 : 72
REAL                 : 33
REAL_CONST           : 113
RETURN               : 70
STOP                 : 69
STRING_CONST         : 116
SUBROUTINE           : 9
THEN                 : 44 45
TIMES                : 72 76 105
TRUE                 : 114
error                : 

Nonterminals, with rules where they appear

AddExpr              : 93 94 94 102 103
AndExpr              : 87 88 90
ArgList              : 82 85
AssignmentStmt       : 21 57
CallStmt             : 30 66
ContinueStmt         : 25 61
DeclPart             : 10 12 15
DeclarationStmt      : 14 15
Declarator           : 35 36
DeclaratorList       : 31 36
Designator           : 43 75 117
DoBody               : 50
DoInnerBlock         : 54 56
DoInnerStmt          : 55 56
DoRangeTail          : 50
DoStmt               : 23 59
ElseBlock            : 45 49
Empty                : 40 52 83
ExecPart             : 10 11 12 13 17
ExecutableStmt       : 16 17 46 47 48 49
Expr                 : 43 44 45 50 50 51 79 84 85 118
FunctionSubprogram   : 5
GotoStmt             : 24 60
IfStmt               : 22 58
LabeledExecutableStmt : 18
MainBody             : 7
MainProgram          : 4
MulExpr              : 101 102 103 105 106
NotExpr              : 89 90 92
OptArgList           : 71 81
OptParamList         : 8 9
OrExpr               : 86 88
ParamList            : 39 42
PowExpr              : 104 105 106 108
Primary              : 108 109
PrintItem            : 77 78
PrintList            : 76 78
PrintStmt            : 28 64
Program              : 0
ProgramUnit          : 2 3
ProgramUnitSeq       : 1 3
ReadItem             : 73 74
ReadList             : 72 74
ReadStmt             : 27 63
RelExpr              : 91
RelOp                : 94
ReturnStmt           : 29 65
StopStmt             : 26 62
SubprogramBody       : 8 9
SubroutineSubprogram : 6
ThenBlock            : 44 45 47
TypeSpec             : 8 31
UnaryExpr            : 107 110 111
UnlabeledExecutableStmt : 19 20

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . ProgramUnitSeq
    (2) ProgramUnitSeq -> . ProgramUnit
    (3) ProgramUnitSeq -> . ProgramUnitSeq ProgramUnit
    (4) ProgramUnit -> . MainProgram
    (5) ProgramUnit -> . FunctionSubprogram
    (6) ProgramUnit -> . SubroutineSubprogram
    (7) MainProgram -> . PROGRAM ID MainBody END
    (8) FunctionSubprogram -> . TypeSpec FUNCTION ID ( OptParamList ) SubprogramBody END
    (9) SubroutineSubprogram -> . SUBROUTINE ID ( OptParamList ) SubprogramBody END
    (32) TypeSpec -> . INTEGER
    (33) TypeSpec -> . REAL
    (34) TypeSpec -> . LOGICAL

    PROGRAM         shift and go to state 7
    SUBROUTINE      shift and go to state 9
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12

    Program                        shift and go to state 1
    ProgramUnitSeq                 shift and go to state 2
    ProgramUnit                    shift and go to state 3
    MainProgram                    shift and go to state 4
    FunctionSubprogram             shift and go to state 5
    SubroutineSubprogram           shift and go to state 6
    TypeSpec                       shift and go to state 8

state 1

    (0) S' -> Program .



state 2

    (1) Program -> ProgramUnitSeq .
    (3) ProgramUnitSeq -> ProgramUnitSeq . ProgramUnit
    (4) ProgramUnit -> . MainProgram
    (5) ProgramUnit -> . FunctionSubprogram
    (6) ProgramUnit -> . SubroutineSubprogram
    (7) MainProgram -> . PROGRAM ID MainBody END
    (8) FunctionSubprogram -> . TypeSpec FUNCTION ID ( OptParamList ) SubprogramBody END
    (9) SubroutineSubprogram -> . SUBROUTINE ID ( OptParamList ) SubprogramBody END
    (32) TypeSpec -> . INTEGER
    (33) TypeSpec -> . REAL
    (34) TypeSpec -> . LOGICAL

    $end            reduce using rule 1 (Program -> ProgramUnitSeq .)
    PROGRAM         shift and go to state 7
    SUBROUTINE      shift and go to state 9
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12

    ProgramUnit                    shift and go to state 13
    MainProgram                    shift and go to state 4
    FunctionSubprogram             shift and go to state 5
    SubroutineSubprogram           shift and go to state 6
    TypeSpec                       shift and go to state 8

state 3

    (2) ProgramUnitSeq -> ProgramUnit .

    PROGRAM         reduce using rule 2 (ProgramUnitSeq -> ProgramUnit .)
    SUBROUTINE      reduce using rule 2 (ProgramUnitSeq -> ProgramUnit .)
    INTEGER         reduce using rule 2 (ProgramUnitSeq -> ProgramUnit .)
    REAL            reduce using rule 2 (ProgramUnitSeq -> ProgramUnit .)
    LOGICAL         reduce using rule 2 (ProgramUnitSeq -> ProgramUnit .)
    $end            reduce using rule 2 (ProgramUnitSeq -> ProgramUnit .)


state 4

    (4) ProgramUnit -> MainProgram .

    PROGRAM         reduce using rule 4 (ProgramUnit -> MainProgram .)
    SUBROUTINE      reduce using rule 4 (ProgramUnit -> MainProgram .)
    INTEGER         reduce using rule 4 (ProgramUnit -> MainProgram .)
    REAL            reduce using rule 4 (ProgramUnit -> MainProgram .)
    LOGICAL         reduce using rule 4 (ProgramUnit -> MainProgram .)
    $end            reduce using rule 4 (ProgramUnit -> MainProgram .)


state 5

    (5) ProgramUnit -> FunctionSubprogram .

    PROGRAM         reduce using rule 5 (ProgramUnit -> FunctionSubprogram .)
    SUBROUTINE      reduce using rule 5 (ProgramUnit -> FunctionSubprogram .)
    INTEGER         reduce using rule 5 (ProgramUnit -> FunctionSubprogram .)
    REAL            reduce using rule 5 (ProgramUnit -> FunctionSubprogram .)
    LOGICAL         reduce using rule 5 (ProgramUnit -> FunctionSubprogram .)
    $end            reduce using rule 5 (ProgramUnit -> FunctionSubprogram .)


state 6

    (6) ProgramUnit -> SubroutineSubprogram .

    PROGRAM         reduce using rule 6 (ProgramUnit -> SubroutineSubprogram .)
    SUBROUTINE      reduce using rule 6 (ProgramUnit -> SubroutineSubprogram .)
    INTEGER         reduce using rule 6 (ProgramUnit -> SubroutineSubprogram .)
    REAL            reduce using rule 6 (ProgramUnit -> SubroutineSubprogram .)
    LOGICAL         reduce using rule 6 (ProgramUnit -> SubroutineSubprogram .)
    $end            reduce using rule 6 (ProgramUnit -> SubroutineSubprogram .)


state 7

    (7) MainProgram -> PROGRAM . ID MainBody END

    ID              shift and go to state 14


state 8

    (8) FunctionSubprogram -> TypeSpec . FUNCTION ID ( OptParamList ) SubprogramBody END

    FUNCTION        shift and go to state 15


state 9

    (9) SubroutineSubprogram -> SUBROUTINE . ID ( OptParamList ) SubprogramBody END

    ID              shift and go to state 16


state 10

    (32) TypeSpec -> INTEGER .

    FUNCTION        reduce using rule 32 (TypeSpec -> INTEGER .)
    ID              reduce using rule 32 (TypeSpec -> INTEGER .)


state 11

    (33) TypeSpec -> REAL .

    FUNCTION        reduce using rule 33 (TypeSpec -> REAL .)
    ID              reduce using rule 33 (TypeSpec -> REAL .)


state 12

    (34) TypeSpec -> LOGICAL .

    FUNCTION        reduce using rule 34 (TypeSpec -> LOGICAL .)
    ID              reduce using rule 34 (TypeSpec -> LOGICAL .)


state 13

    (3) ProgramUnitSeq -> ProgramUnitSeq ProgramUnit .

    PROGRAM         reduce using rule 3 (ProgramUnitSeq -> ProgramUnitSeq ProgramUnit .)
    SUBROUTINE      reduce using rule 3 (ProgramUnitSeq -> ProgramUnitSeq ProgramUnit .)
    INTEGER         reduce using rule 3 (ProgramUnitSeq -> ProgramUnitSeq ProgramUnit .)
    REAL            reduce using rule 3 (ProgramUnitSeq -> ProgramUnitSeq ProgramUnit .)
    LOGICAL         reduce using rule 3 (ProgramUnitSeq -> ProgramUnitSeq ProgramUnit .)
    $end            reduce using rule 3 (ProgramUnitSeq -> ProgramUnitSeq ProgramUnit .)


state 14
